--- a/cluster/apps/file-service/samba/helm-release.yaml
+++ b/cluster/apps/file-service/samba/helm-release.yaml
@@ -72,7 +72,7 @@ spec:
       old-disk-files:
         enabled: true
         type: hostPath
-        hostPath: /mnt/old_disk1
+        hostPath: /mnt/1
         mountPath: /share/old_disk
       tmp-storage-files:
         enabled: true
