--- a/cluster/apps/file-service/samba/helm-release.yaml
+++ b/cluster/apps/file-service/samba/helm-release.yaml
@@ -85,6 +85,7 @@ spec:
         enabled: true
         data:
           config.yml: |
+            # test ${SECRET_DOMAIN}
             share:
               - name: camera
                 path: /share/camera
