--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -31,14 +31,16 @@ stringData:
   SECRET_BITWARDEN_PGSQL_PASSWORD: ENC[AES256_GCM,data:m6USyEn3k+JeQLqQsOqiKQGvq1xhIzv9kplHObDBKI0=,iv:Ct7GBoziaMoiduoZFU7PI+GOPzBwVsDnFLC1O0XQcdM=,tag:VailzZ/d00ueBSjXS7VTGA==,type:str]
   SECRET_K8S_API_SERVER_HOST: ENC[AES256_GCM,data:276MiX/6MKDozPA=,iv:g2GOW3aE9Yn4aEka5S0mUJqEhlgsIz/TjSXx0CPS4Lg=,tag:YNPn31136uIpPH6VWpa/jA==,type:str]
   SECRET_K8S_API_SERVER_PORT: ENC[AES256_GCM,data:F96gMw==,iv:ohv+x14EZf4NUzWUn6S7G4wJphb9HVygcjf9sPdJUQw=,tag:8mgIO6ya3gUzGPgKwwS70Q==,type:str]
+  SECRET_SAMBA_USERNAME: ENC[AES256_GCM,data:yOMheA==,iv:yS9YUnM/GQB93hsulH8bQgj1UoIEfDKuaQ3IA8+Y37M=,tag:EpUqLv1hbwGUFl0mACja/A==,type:str]
+  SECRET_SAMBA_PASSWORD: ENC[AES256_GCM,data:dp30GZEHZhWpmIPtAPFChuZfFMHBHX0GwjVnbwCxrV8=,iv:Z+XbtVqKFe4ZCy1er8C6LUovu5rOI6hi9b+05ZE+lOE=,tag:S5dNOh+vWX7vo6U0SVNnag==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-08-21T19:20:54Z"
-  mac: ENC[AES256_GCM,data:3BbHkCkQM6Lkdi4zk1vE7KYdXOfY8LKfdtkwzVarTzLFfXNrJizkYFK12YA2WssIicAbc1MwKjtH5NOodxYXM6W4ephPIHJEJ1/xozlJb0clbZVF5VW3ibktYpmTVvPsODHWfX91N4WYpgC+g2sLEHfK2oZl7cCJ4JbTf1/l5Iw=,iv:dbEiznHb63OZiACjBv6haAaXE88JHsS2P/iaWkSopgA=,tag:v0uzosBa9yaDfjs6iPTb3Q==,type:str]
+  lastmodified: "2023-02-25T18:05:44Z"
+  mac: ENC[AES256_GCM,data:DDhy27yv8SeyYS/xjpb2mHjFuhVx3LaKzjZKsnvR+0RfWhtjLYAEbmothrj76hmof5CY2plzKHM7NN9FQ310ldnm1lbgr2hSitzKZHk8WsQ2N2GB/BZ+tGZIZhKLAFngoN95Zn5fc5BtYREZf4VFiW+3B1hGYQ0W6UulrfCYJgQ=,iv:NBOsfpvHJCLdX1CaBOb+gW3nDP6ZRGv41d95LLTf40k=,tag:xmpddG6Rqyt3kNC54KnN3w==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
@@ -81,4 +83,4 @@ sops:
         -----END PGP MESSAGE-----
       fp: A092F959BA0505A15DD0DE90E7B11D65218B8FD2
   encrypted_regex: ^(data|stringData)$
-  version: 3.7.2
+  version: 3.7.3
