--- a/cluster/apps/programming/nexus-repository-manager/direct-ingress/nexus-nexus-repository-manager-docker-5003.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/direct-ingress/nexus-nexus-repository-manager-docker-5003.yaml
@@ -16,7 +16,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: "k8s-gcr-io.${SECRET_DOMAIN}"
+    - host: "k8s-gcr-io-nexus.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
@@ -26,7 +26,7 @@ spec:
                 name: nexus-nexus-repository-manager-docker-5003
                 port:
                   number: 5003
-    - host: "k8s-gcr-io.direct.${SECRET_DOMAIN}"
+    - host: "k8s-gcr-io-nexus.direct.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
