为nexus本体增加直连域名 调整nexus的ingress文件目录名

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -50,7 +50,7 @@ spec:
             secretName: "${SECRET_DOMAIN/./-}-tls"
 
     ingress:
-      enabled: true
+      enabled: false
       ingressClassName: "traefik"
       hostPath: /
       hostRepo: "nexus.${SECRET_DOMAIN}"
