--- a/cluster/apps/programming/nexus-repository-manager/ingress/kustomization.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/ingress/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   - nexus-nexus-repository-manager-docker-5004.yaml
   - nexus-nexus-repository-manager-docker-5005.yaml
   - nexus-nexus-repository-manager-docker-5006.yaml
+  - nexus-nexus-repository-manager-docker-5007.yaml
