--- a/cluster/apps/programming/nexus-repository-manager/ingress/nexus-nexus-repository-manager-docker-5007.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/ingress/nexus-nexus-repository-manager-docker-5007.yaml
@@ -16,7 +16,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: "registry-k8s-io-nexus.${SECRET_DOMAIN}"
+    - host: "lscr-io-nexus.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
@@ -26,7 +26,7 @@ spec:
                 name: nexus-nexus-repository-manager-docker-5007
                 port:
                   number: 5007
-    - host: "registry-k8s-io-nexus.direct.${SECRET_DOMAIN}"
+    - host: "lscr-io-nexus.direct.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
