为gitlab的runnner添加privileged设置

--- a/cluster/apps/programming/gitlab/helm-release.yaml
+++ b/cluster/apps/programming/gitlab/helm-release.yaml
@@ -41,6 +41,24 @@ spec:
         tls:
           secretName: gitlab-registry-tls
 
+    gitlab-runner:
+      runners:
+        config: |
+          [[runners]]
+            [runners.kubernetes]
+              privileged = true
+            image = "ubuntu:18.04"
+            {{- if .Values.global.minio.enabled }}
+            [runners.cache]
+              Type = "s3"
+              Path = "gitlab-runner"
+              Shared = true
+              [runners.cache.s3]
+                ServerAddress = {{ include "gitlab-runner.cache-tpl.s3ServerAddress" . }}
+                BucketName = "runner-cache"
+                BucketLocation = "us-east-1"
+                Insecure = false
+            {{ end }}
     minio:
       ingress:
         tls:
