--- a/cluster/apps/entertainment/prowlarr/helm-release.yaml
+++ b/cluster/apps/entertainment/prowlarr/helm-release.yaml
@@ -25,8 +25,8 @@ spec:
       location: "home"
 
     image:
-      repository: ghcr.io/k8s-at-home/prowlarr
-      tag: v0.4.0.1802
+      repository: linuxserver/prowlarr
+      tag: develop-version-1.3.2.2984
 
     env:
       TZ: "Asia/Shanghai"
