给file-service添加一个使用默认压缩文件的ceph fs的other-files PVC用于存储非媒体类文件

--- a/cluster/apps/file-service/pvcs/kustomization.yaml
+++ b/cluster/apps/file-service/pvcs/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - camera-files.yaml
   - music-files.yaml
+  - other-files.yaml
   - other-media-files.yaml
   - recording-files.yaml
   - screenshot-files.yaml
