--- a/cluster/apps/entertainment/bazarr/default.yaml
+++ b/cluster/apps/entertainment/bazarr/default.yaml
@@ -7,7 +7,7 @@
 
 image:
   # -- image repository
-  repository: ghcr.io/k8s-at-home/bazarr
+  repository: ghcr.io/onedr0p/bazarr
   # -- image tag
   tag: v0.9.9
   # -- image pull policy
