--- a/cluster/apps/entertainment/bazarr/helm-release.yaml
+++ b/cluster/apps/entertainment/bazarr/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       location: "home"
 
     image:
-      repository: ghcr.io/k8s-at-home/bazarr
+      repository: ghcr.io/onedr0p/bazarr
       tag: v1.1.2
 
     env:
