--- a/cluster/apps/entertainment/lidarr/default.yaml
+++ b/cluster/apps/entertainment/lidarr/default.yaml
@@ -7,7 +7,7 @@
 
 image:
   # -- image repository
-  repository: ghcr.io/k8s-at-home/lidarr
+  repository: ghcr.io/onedr0p/lidarr
   # -- image tag
   tag: v1.0.0.2255
   # -- image pull policy
