--- a/cluster/apps/entertainment/lidarr/helm-release.yaml
+++ b/cluster/apps/entertainment/lidarr/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       location: "home"
 
     image:
-      repository: ghcr.io/k8s-at-home/lidarr
+      repository: ghcr.io/onedr0p/lidarr
       tag: v1.0.2.2592
 
     env:
