--- a/cluster/apps/entertainment/plex/default.yaml
+++ b/cluster/apps/entertainment/plex/default.yaml
@@ -7,7 +7,7 @@
 
 image:
   # -- image repository
-  repository: ghcr.io/k8s-at-home/plex
+  repository: ghcr.io/onedr0p/plex
   # -- image tag
   tag: v1.24.1.4931-1a38e63c6
   # -- image pull policy
