--- a/cluster/apps/entertainment/qbittorrent/default.yaml
+++ b/cluster/apps/entertainment/qbittorrent/default.yaml
@@ -7,7 +7,7 @@
 
 image:
   # -- image repository
-  repository: ghcr.io/k8s-at-home/qbittorrent
+  repository: ghcr.io/onedr0p/qbittorrent
   # -- image tag
   tag: v4.3.7
   # -- image pull policy
