--- a/cluster/apps/entertainment/qbittorrent/helm-release.yaml
+++ b/cluster/apps/entertainment/qbittorrent/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       location: "home"
 
     image:
-      repository: ghcr.io/k8s-at-home/qbittorrent
+      repository: ghcr.io/onedr0p/qbittorrent
       tag: v4.4.2
 
     env:
