--- a/cluster/apps/entertainment/radarr/default.yaml
+++ b/cluster/apps/entertainment/radarr/default.yaml
@@ -7,7 +7,7 @@
 
 image:
   # -- image repository
-  repository: ghcr.io/k8s-at-home/radarr
+  repository: ghcr.io/onedr0p/radarr
   # -- image tag
   tag: v3.2.2.5080
   # -- image pull policy
