--- a/cluster/apps/entertainment/sonarr/default.yaml
+++ b/cluster/apps/entertainment/sonarr/default.yaml
@@ -7,7 +7,7 @@
 
 image:
   # -- image repository
-  repository: ghcr.io/k8s-at-home/sonarr
+  repository: ghcr.io/onedr0p/sonarr
   # -- image tag
   tag: v3.0.6.1342
   # -- image pull policy
