--- a/cluster/apps/entertainment/sonarr/helm-release.yaml
+++ b/cluster/apps/entertainment/sonarr/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       location: "home"
 
     image:
-      repository: ghcr.io/k8s-at-home/sonarr
+      repository: ghcr.io/onedr0p/sonarr
       tag: v3.0.9.1549
 
     env:
