修复qbittorrent的镜像tag错误问题

--- a/cluster/apps/entertainment/qbittorrent/helm-release.yaml
+++ b/cluster/apps/entertainment/qbittorrent/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
 
     image:
       repository: ghcr.io/onedr0p/qbittorrent
-      tag: v4.4.2
+      tag: 4.5.2
 
     env:
       TZ: "Asia/Shanghai"
