--- a/cluster/apps/entertainment/radarr/helm-release.yaml
+++ b/cluster/apps/entertainment/radarr/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
 
     image:
       repository: ghcr.io/onedr0p/radarr
-      tag: v4.2.4.6635
+      tag: 4.2.4.6635
 
     env:
       TZ: "Asia/Shanghai"
