恢复helm对kubevirt的管理，并更新kubevirt到最新版

--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - gpu-operator
 #  - kasten
   - kube-system
-#  - kubevirt
+  - kubevirt
   - metallb-system
   - namespaces
   - rook-ceph
