--- a/cluster/core/kubevirt/kustomization.yaml
+++ b/cluster/core/kubevirt/kustomization.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - https://github.com/kubevirt/kubevirt/releases/download/v0.59.0/kubevirt-operator.yaml
-  - https://github.com/kubevirt/kubevirt/releases/download/v0.59.0/kubevirt-cr.yaml
-  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.54.3/cdi-operator.yaml
-  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.54.3/cdi-cr.yaml
+  - kubevirt-operator.yaml
+  - kubevirt-cr.yaml
+  - cdi-operator.yaml
+  - cdi-cr.yaml
+#  - https://github.com/kubevirt/kubevirt/releases/download/v0.59.0/kubevirt-operator.yaml
+#  - https://github.com/kubevirt/kubevirt/releases/download/v0.59.0/kubevirt-cr.yaml
+#  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.54.3/cdi-operator.yaml
+#  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.54.3/cdi-cr.yaml
 patchesStrategicMerge:
   - override-kubevirt-config.yaml
