调整ceph的设置，使osd pod不再有cpu资源的请求，避免出现每个osd都持续在k8s中占用固定1核的cpu可用资源的情况

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -113,6 +113,8 @@ spec:
         osd:
           limits:
             memory: "8192Mi"
+          requests:
+            memory: "4Gi"
         # mds的元数据缓存默认有限制只会使用4GB内存，但实际在大量小文件写入时会出现占用到几十GB且不清理的情况，做个限制以防万一
         mds:
           limits:
