重新开启允许在pg状态非完全健康时升级OSD版本

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -54,7 +54,7 @@ spec:
 
     cephClusterSpec:
       # 是否在pg状态非完全健康的情况下也允许升级OSD
-      continueUpgradeAfterChecksEvenIfNotHealthy: false
+      continueUpgradeAfterChecksEvenIfNotHealthy: true
 
       mon:
         # 允许在同一个节点上运行多个mon
