启用kubevirt的Macvtap功能

--- a/cluster/core/kubevirt/override-kubevirt-config.yaml
+++ b/cluster/core/kubevirt/override-kubevirt-config.yaml
@@ -13,6 +13,7 @@ spec:
         - HostDisk
         - HypervStrictCheck
         - CPUManager
+        - Macvtap
   infra:
     nodePlacement:
       nodeSelector:
