初始化新集群

--- a/cluster/core/kube-system/kustomization.yaml
+++ b/cluster/core/kube-system/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - kilo
   - kubed
   - local-path-provisioner
-  - metrics-server
+#  - metrics-server
 #  - snapshot-controller
   - traefik
