--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -3,10 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cert-manager
-  - gpu-operator
+#  - gpu-operator
 #  - kasten
   - kube-system
-  - kubevirt
+  #  - kubevirt
   - metallb-system
   - namespaces
-  - rook-ceph
+#  - rook-ceph
