--- a/cluster/core/kube-system/cilium/helm-release.yaml
+++ b/cluster/core/kube-system/cilium/helm-release.yaml
@@ -23,10 +23,15 @@ spec:
     debug:
       enabled: false
     operator:
-      replicas: 1
       nodeSelector:
         location: "home"
         kubernetes.io/arch: "amd64"
     kubeProxyReplacement: "strict"
     k8sServiceHost: "${SECRET_K8S_API_SERVER_HOST}"
     k8sServicePort: "${SECRET_K8S_API_SERVER_PORT}"
+    hubble:
+      enabled: true
+      relay:
+        enabled: true
+      ui:
+        enabled: true
